# axdl-rs

./: .gitignore  99-axdl.rules  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml
axdl/: Cargo.toml
axdl-cli/: Cargo.toml
axdl-cli/src/: main.rs
axdl-gui/: Cargo.toml  index.html
axdl-gui/.cargo/: config.toml
axdl-gui/src/: main.rs
axdl-gui/ui/: app-window.slint
axdl/src/: communication.rs  frame.rs  lib.rs  partition.rs  transport.rs
axdl/src/transport/: mod.rs  serial.rs  usb.rs  webserial.rs  webusb.rs
docs/: index.html
docs/axdl-gui/v0.1.1/pkg/: axdl_gui.d.ts
docs/axdl-gui/v0.1.2/pkg/: axdl_gui.d.ts  axdl_gui.js  axdl_gui_bg.wasm.d.ts  package.json
pages/axdl-gui/v0.1.1/pkg/: README.md  axdl_gui.js  axdl_gui_bg.wasm.d.ts  package.json
src/: frame.rs  main.rs  partition.rs
wireshark/: axdl.lua
