[package]
name = "axdl-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axdl = { path = "../axdl" }

anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
indicatif = { workspace = true }