[package]
name = "axdl-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Unofficial CLI image download tool for Axera SoCs"
repository = "https://github.com/ciniml/axdl-rs"
keywords = ["cli", "tool", "axera"]
categories = ["command-line-utilities"]
readme = "../README.md"

[dependencies]
axdl = { path = "../axdl", version = "0.1.1", default-features = false, features = ["usb", "serial"] }

anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
indicatif = { workspace = true }