[package]
name = "axdl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unofficial CLI image download tool for Axera SoCs"
keywords = ["cli", "tool", "axera"]
categories = ["command-line-utilities"]
readme = "../README.md"

[dependencies]
axdl = { path = "../axdl", version = "0.1.1", default-features = false, features = ["usb", "serial"] }

anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
indicatif = { workspace = true }