[package]
name = "axdl-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unofficial GUI image download tool for Axera SoCs"
keywords = ["gui", "tool", "axera"]  # Updated keywords to reflect GUI
categories = ["graphical-user-interfaces"]  # Updated category for GUI
readme = "../README.md"

[dependencies]
axdl = { path = "../axdl", version = "0.1.1", default-features = false, features = ["webusb", "webserial"] }

anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
indicatif = { workspace = true }
slint = { version = "1.8.0" }
getrandom = { version = "0.2.15", features = ["js"] }

webusb-web = { workspace = true }
wasm-bindgen-futures = { workspace = true}
web-sys = { workspace = true, features = ["Usb", "UsbDevice", "UsbDeviceFilter", "Serial", "SerialPort", "SerialPortInfo", "SerialOptions", "SerialPortRequestOptions", "Blob", "File", "FileReaderSync"] }
js-sys = { workspace = true }

tracing-wasm = { workspace = true }
rfd = { workspace = true, features = ["file-handle-inner"] }
futures-io = { workspace = true }
pin-project = { workspace = true }

[build-dependencies]
slint-build = "1.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }

[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]
